# segmentation_evaluation

./: README.md  color_labels.py  evaluation.py  match_image_size.py  pyproject.toml
