[tool.poetry]
name = "segmentation_evaluation"
version = "0.1.0"
description = ""
authors = ["Ryosuke Araki <ryosuke.araki@zozo.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.22.4"
numba = "^0.55.2"
opencv-python = "^4.5.5"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
